<resources>
    <string name="app_name">MyApp</string>
    <string name="str_click">点击</string>
    <string name="str_main_rxJava">rxJava实例</string>
    <string name="str_main_rxLifecycle">rxLifecycle实例</string>
    <string name="str_main_permission">权限管理</string>
    <string name="str_main_glide">glide实例</string>
    <string name="str_main_smart_refresh">SmartRefresh实例</string>
    <string name="str_main_web_view">WebView实例</string>
    <string name="str_main_touch">touch实例</string>
    <string name="str_main_frame_animation">帧动画</string>
    <string name="str_main_time_count_down">倒计时</string>
    <string name="str_main_video_recording">视频录制</string>
    <string name="str_main_event_bus">event bus</string>
    <string name="str_main_file_provider">file provider</string>
    <string name="str_main_service">service</string>
    <string name="str_main_ripple">ripple</string>
    <string name="str_test">测试</string>
    <string name="str_back_press_info">再按一次，就退出应用了!</string>
    <string name="str_main_aidl">aidl</string>
    <string name="str_main_customer_flow_layout">customer flowLayout</string>
    <string name="button1">button1</string>
    <string name="button2">button2</string>
    <string name="string_click">click</string>
    <string name="banner">banner</string>
    <string name="button">Button</string>
    <string name="tv_bottom_1">tv_bottom_1</string>
    <string name="tv_bottom_2">tv_bottom_2</string>
    <string name="tv_bottom_3">tv_bottom_3</string>
    <string name="str_flow_content_1">发了啥</string>
    <string name="str_flow_content_2">发了啥2</string>
    <string name="str_flow_content_3">发了啥3</string>
    <string name="str_flow_content_4">发了啥444444444444444444444</string>
    <string name="str_flow_content_45">发了啥44445554</string>
    <string name="str_start">开始</string>
    <string name="str_update">更新</string>
    <string name="str_stop">结束</string>
    <string name="str_time_count_down">%1$d秒</string>
    <string name="str_video">主页</string>
    <string name="str_image">照片</string>
    <string name="str_tools">工具</string>
    <string name="str_setting">设置</string>
    <string name="str_cancel">取消</string>
    <string name="str_ok">确定</string>
    /********************************** Notification start ****************************************/
    <string name="str_notification_title">MyApp准备就绪</string>
    <string name="str_notification_content_start">点击开始录制</string>
    /********************************** Notification end ****************************************/
</resources>
